--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
   "name": "scheduler",
-  "version": "1.0.0",
-  "description": "스케쥴러 돌리는 친구들을 모아둡니다.",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "scheduler": "ts-node index.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@slack/web-api": "^6.12.0",
-    "@vercel/node": "^3.1.7",
-    "node-schedule": "^2.1.1"
+    "@slack/web-api": "^7.1.0",
+    "@types/node-schedule": "^2.1.7",
+    "next": "14.2.4",
+    "node-schedule": "^2.1.1",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^18.19.34",
-    "@types/node-schedule": "^2.1.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/daehwahap/scheduler.git"
-  },
-  "author": "11t518s",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/daehwahap/scheduler/issues"
-  },
-  "homepage": "https://github.com/daehwahap/scheduler#readme"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "typescript": "^5"
+  }
 }
